# python-project-template

./: CITATION.cff  Makefile  README.md  create.py  environment.yml  pyproject.toml  ruff.toml
data/: README.md
notebooks/: 01_methods_walkthrough.ipynb  99_results_report.ipynb  project-definition-TEMPLATE.ipynb  results_report.ipynb
prompts/: AI_DIARY_TEMPLATE.md
src/wrr/: __init__.py  culvert.py  gdal_utils.py  plotting.py  standard_step.py
src/wrr/scripts/: prepare_data.py  run_analysis.py
tests/: test_culvert.py  test_standard_step.py
